--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -195,13 +195,21 @@
 
 
       function onSignIn(googleUser) {
-      var profile = googleUser.getBasicProfile();
-      console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-      console.log('Name: ' + profile.getName());
-      console.log('Image URL: ' + profile.getImageUrl());
-      console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
-
-    }
+        var profile = googleUser.getBasicProfile();
+        console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+        console.log('Name: ' + profile.getName());
+        console.log('Image URL: ' + profile.getImageUrl());
+        console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+        var data={name:profile.getName(),img:profile.getImageUrl(),username:profile.getEmail()};
+        fetch('http://localhost:8080/signingoogle',{
+          method:'POST',
+          headers:{'Content-Type':'application/json'},
+          body:JSON.stringify(data)})
+          .then(response=>response.json())
+          .then(data=>{
+            console.log(data);
+        });
+      }
 
 
 
