--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -96,7 +96,15 @@
               
                <button type="submit" class="btn btn-primary" id="signupButton">Sign Up</button>
           </form>
-
+                <div id="gSignInLoader" style="display: none">
+                  <div class="text-center">
+                    
+                    <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
+                  
+                  </div>
+                </div>
 
 
 
@@ -232,7 +240,7 @@
         console.log('Image URL: ' + profile.getImageUrl());
         console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
         var data={name:profile.getName(),img:profile.getImageUrl(),username:profile.getEmail()};
-
+        document.getElementById("gSignInLoader").style.display="block";
         //fetch('http://localhost:8080/signingoogle',{
         fetch('https://mapio.azurewebsites.net/signingoogle', {
           method:'POST',
@@ -241,7 +249,7 @@
           .then(response=>response.json())
           .then(data=>{
             console.log(data);
-
+            document.getElementById("gSignInLoader").style.display="none";
             if(data.error==="1"){
               document.getElementById("errorMsgSignup").innerHTML="Some Error Occurred on database. Please open a issue at <a href='https://github.com/Spectre-ak/real-time-loc-app/issues'>Github</a>.";
              document.getElementById("errorMsg").innerHTML="Some Error Occurred on database. Please open a issue at <a href='https://github.com/Spectre-ak/real-time-loc-app/issues'>Github</a>.";
